fixed layout for about and homepage on mobile screens

--- a/css/about.style.css
+++ b/css/about.style.css
@@ -502,8 +502,9 @@ footer {
   }
 
   #hero-heading {
-    margin-left: 7%;
+    margin-left: 0;
     text-align: center;
+    width: 100%;
   }
 
   .heading-main {
